--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,3 +36,9 @@ steps:
     command: test
     projects: '**/*.UnitTest.csproj'
     arguments: '--configuration $(buildConfiguration)'
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish build artifacts'
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    artifactName: $(artifactName)
