--- a/API-MagellanGPT/API.Domain/API.Domain.csproj
+++ b/API-MagellanGPT/API.Domain/API.Domain.csproj
@@ -8,8 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
-    <PackageReference Include="JWT" Version="10.1.1" />
     <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.4.0" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.4.0" />
   </ItemGroup>
 
 </Project>
