init azure key vault

--- a/API-MagellanGPT/API.Web/appsettings.json
+++ b/API-MagellanGPT/API.Web/appsettings.json
@@ -5,5 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Model": {
+    "gpt3": {
+      "ModelId": "gpt-35",
+      "Endpoint": "https://magellan-gpt.openai.azure.com/",
+      "Key": "10306409e1964dd994d7be5a04daf638",
+      "ServiceId": "gpt3"
+    },
+    "gpt4": {
+      "ModelId": "gpt-4",
+      "Endpoint": "https://magellan-gpt.openai.azure.com/",
+      "Key": "10306409e1964dd994d7be5a04daf638",
+      "ServiceId": "gpt4"
+    }
+  }
 }
