--- a/API-MagellanGPT/API.Web/appsettings.json
+++ b/API-MagellanGPT/API.Web/appsettings.json
@@ -6,18 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "Model": {
-    "gpt3": {
-      "ModelId": "gpt-35",
-      "Endpoint": "https://magellan-gpt.openai.azure.com/",
-      "Key": "10306409e1964dd994d7be5a04daf638",
-      "ServiceId": "gpt3"
-    },
-    "gpt4": {
-      "ModelId": "gpt-4",
-      "Endpoint": "https://magellan-gpt.openai.azure.com/",
-      "Key": "10306409e1964dd994d7be5a04daf638",
-      "ServiceId": "gpt4"
-    }
+  "keyVault": {
+    "TenantId": "1e70e2d5-3cab-43fd-805b-4ffde4d58432",
+    "ClientId": "8765f370-18f1-434c-92ad-be4ad238cbf5",
+    "ClientSecret": "cu~8Q~PROoaSdQRqMGF4xCmp22fChqkUKYkz-cdh"
   }
 }
