connexion au blob storage

--- a/API-MagellanGPT/API.Web/appsettings.json
+++ b/API-MagellanGPT/API.Web/appsettings.json
@@ -6,9 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-  "keyVault": {
-    "TenantId": "1e70e2d5-3cab-43fd-805b-4ffde4d58432",
-    "ClientId": "8765f370-18f1-434c-92ad-be4ad238cbf5",
-    "ClientSecret": "cu~8Q~PROoaSdQRqMGF4xCmp22fChqkUKYkz-cdh"
-  }
+  //"keyVault": {
+  //  "TenantId": "",
+  //  "ClientId": "",
+  //  "ClientSecret": ""
+  //},
+  //"storage": {
+  //  "urlBlob": "",
+  //  "connectionString": "",
+  //  "containerName": ""
+  //}
 }
