--- a/API-MagellanGPT/API.Domain/API.Domain.csproj
+++ b/API-MagellanGPT/API.Domain/API.Domain.csproj
@@ -13,8 +13,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.34" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.38.1" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.6.2" />
-    <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.6.2" />
+    <PackageReference Include="Microsoft.KernelMemory.Core" Version="0.35.240318.1" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.6.3" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.6.3" />
   </ItemGroup>
 
 </Project>
