--- a/API-MagellanGPT/API.Infrastructure/API.Infrastructure.csproj
+++ b/API-MagellanGPT/API.Infrastructure/API.Infrastructure.csproj
@@ -15,8 +15,9 @@
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.38.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.6.2" />
-    <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.6.2" />
+    <PackageReference Include="Microsoft.KernelMemory.Core" Version="0.35.240318.1" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.6.3" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.6.3" />
   </ItemGroup>
 
   <ItemGroup>
