correction du RAG avec la suppression des documents dans le cache

--- a/API-MagellanGPT/API.Web/appsettings.json
+++ b/API-MagellanGPT/API.Web/appsettings.json
@@ -5,15 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  //"keyVault": {
-  //  "TenantId": "",
-  //  "ClientId": "",
-  //  "ClientSecret": ""
-  //},
-  //"storage": {
-  //  "urlBlob": "",
-  //  "connectionString": "",
-  //  "containerName": ""
-  //}
+  "AllowedHosts": "*"
 }
