--- a/API-MagellanGPT/API.Application/API.Application.csproj
+++ b/API-MagellanGPT/API.Application/API.Application.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\API.Domain\API.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
