--- a/API-MagellanGPT/API.Test/API.Test.csproj
+++ b/API-MagellanGPT/API.Test/API.Test.csproj
@@ -11,9 +11,14 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="itext7" Version="8.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\API.Application\API.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
