--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -13,6 +13,15 @@ steps:
   inputs:
     packageType: 'sdk'
     version: '8.0.x'
+- checkout: self
+  fetchDepth: 0
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'SonarCloud'
+    organization: 'magellantgpt'
+    scannerMode: 'MSBuild'
+    projectKey: '2024-DI3-P3-G3_API'
+    projectName: 'API'
 
 - task: DotNetCoreCLI@2
   displayName: 'Build'
@@ -20,6 +29,14 @@ steps:
     command: 'build'
     projects: '**/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
+
+- task: SonarCloudAnalyze@1
+  inputs:
+    jdkversion: 'JAVA_HOME_17_X64'
+
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
 
 - task: DotNetCoreCLI@2
   displayName: 'Publish'
